--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" id="username" name="username" placeholder="Username" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <input type="submit" id="login submit" value="Login">
-                <div><a id="guestlink" href="temp.html">View As Guest</a></div>
+                <div><a id="guestlink" href="guest.html">View As Guest</a></div>
               </form> 
             </div>
           </section>
